@@ -1,4 +1,5 @@
 0.5.1:
+  - Now passing response header information as :header field in response.
   - Major performance improvements.
   - Support for proxies.
 
